tests/fixtures/errors/enum_not_exhaustive.ore
type Color
  Red
  Green
  Blue

fn main
  c := Red
  match c
    Red -> print "r"
    Green -> print "g"
